--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
     "bcryptjs": "^3.0.2",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
